--- a/index.css
+++ b/index.css
@@ -1,17 +1,49 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 html {
     scroll-behavior: smooth;
 }
 
-div.sticky {
+canvas{
+    border: 1px solid black;
+    width: 97vw;
+    margin: 10px;
+}
+
+.sticky {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     font-size: 20px;
     display: flex;
-    justify-content: space-between;
-    padding-bottom: 5px;
+    padding: 0.5rem;
+    height: 60px;
+    background-color: #bbbbbb;
 }
 
+/* btn - buttons of the menu  */
+.btn{
+    border: none;
+    outline: none;
+    padding: 0.2rem;
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    margin: 0.2rem;
+}
+
+.btn:hover{
+    background-color: #d6d6d6;
+}
 
 /* The switch - the box around the slider */
 
@@ -81,4 +113,94 @@ input:checked+.slider:before {
 
 .slider.round:before {
     border-radius: 50%;
+}
+
+/* right - the right box which contains the toggle button of blackboard */
+.right{
+  position: absolute;
+  top: 15px;
+  right: 20px;
+}
+
+/* left - the whole div element containing the 4 buttons */
+.left{
+  width: 50%;
+}
+
+/* Menu  */
+
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  margin-right: 0.8rem;
+}
+.line {
+  fill: none;
+  stroke: black;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+/* hover effects */
+
+.hover{
+  position: absolute;
+  background-color: #d6d6d6;
+  padding: 0.2rem;
+  font-size: 15px;
+  border: 1px solid black;
+  top: 60px;
+}
+.clear{
+  display: none;
+}
+.new{
+  left: 95px;
+  display: none;
+}
+.save{
+  display: none;
+  left: 130px;
+}
+.undo{
+  display: none;
+  left: 200px;
+}
+
+/* show , off - These are used to toggle the display  */
+.show{
+  display: block;
+}
+.off{
+  display: none;
 }
