Added pen cursor
Pen cursor is shown when hovering over the board

--- a/index.css
+++ b/index.css
@@ -82,3 +82,10 @@ input:checked+.slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+
+/*Pen Cursor*/
+
+#canvas_div{
+    cursor: url("pencil-outline.svg"), auto;  
+}
