--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ canvas{
     display: flex;
     padding: 0.5rem;
     height: 60px;
-    background-color: #bbbbbb;
+    background-color: #000000;
 }
 
 /* btn - buttons of the menu  */
@@ -128,6 +128,10 @@ input:checked+.slider:before {
   width: 50%;
 }
 
+.black-board-text{
+  color: white;
+}
+
 /* Hambergur menu */
 
 .menu {
@@ -139,7 +143,7 @@ input:checked+.slider:before {
 }
 .line {
   fill: none;
-  stroke: black;
+  stroke: white;
   stroke-width: 6;
   transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -196,6 +200,14 @@ input:checked+.slider:before {
 .undo{
   display: none;
   left: 200px;
+}
+.saveWork{
+  display: none;
+  left: 235px;
+}
+.deleteSaved{
+  display: none;
+  left: 260px;
 }
 
 /* show , off - These are used to toggle the display  */
