--- a/src/index.css
+++ b/src/index.css
@@ -125,14 +125,6 @@ input:checked+.slider:before {
     right: 20px;
 }
 
-/* left - the whole div element containing the 4 buttons */
-
-.left {
-    width: 50%;
-    z-index: 10;
-    position: fixed;
-    left: 5rem;
-}
 
 .black-board-text {
     color: black;
@@ -140,114 +132,10 @@ input:checked+.slider:before {
     position: relative;
 }
 
-
-/* Hambergur menu */
-
-.menu {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    margin-right: 0.8rem;
-}
-
-.line {
-    fill: none;
-    stroke: white;
-    stroke-width: 6;
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.line1 {
-    stroke-dasharray: 60 207;
-    stroke-width: 6;
-}
-
-.line2 {
-    stroke-dasharray: 60 60;
-    stroke-width: 6;
-}
-
-.line3 {
-    stroke-dasharray: 60 207;
-    stroke-width: 6;
-}
-
-.opened .line1 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 6;
-}
-
-.opened .line2 {
-    stroke-dasharray: 1 60;
-    stroke-dashoffset: -30;
-    stroke-width: 6;
-}
-
-.opened .line3 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 6;
-}
-
-
-/* hover effects - showing the text if hovered on buttons*/
-
-.hover {
-    position: absolute;
-    background-color: #d6d6d6;
-    padding: 0.2rem;
-    font-size: 15px;
-    border: 1px solid black;
-    top: 60px;
-}
-
-.clear {
-    display: none;
-}
-
-.new {
-    left: 95px;
-    display: none;
-}
-
-.save {
-    display: none;
-    left: 130px;
-}
-
-.undo {
-    display: none;
-    left: 200px;
-}
-
-.saveWork {
-    display: none;
-    left: 235px;
-}
-
-.deleteSaved {
-    display: none;
-    left: 260px;
-}
-
-
-/* show , off - These are used to toggle the display  */
-
-.show {
-    display: block;
-}
-
-.off {
-    display: none;
-}
-
-
 /*Pen Cursor*/
 
 #canvas_div {
-    cursor: url("static/icons/pencil-outline.svg"), auto;
+    cursor: url("../static/icons/pencil-outline.svg"), auto;
     text-align: center;
 	padding:30px 0;
 }
